2015-06-30  Andy Buckley  <andy.buckley@cern.ch>

	* Marking many old & superseded ATLAS analyses as obsolete.

	* Adding cmpMomByMass and cmpMomByAscMass sorting functors.

	* Bump version to 2.3.0 and require YODA > 1.4.0 (current head at
	time of development).

2015-06-08  Andy Buckley  <andy.buckley@cern.ch>

	* Add handling of -m/-M flags on rivet-cmphistos and rivet-mkhtml,
	moving current rivet-mkhtml -m/-M to -a/-A (for analysis name
	pattern matching). Requires YODA head (will be YODA 1.3.2 of
	1.4.0).

	* src/Analyses/ATLAS_2015_I1364361.cc: Now use the built-in prompt
	photon selecting functions.

	* Tweak legend positions in MC_JETS .plot file.

	* Add a bit more debug output from ZFinder and WFinder.

2015-05-24  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Normalisation discussion concerning ATLAS_2014_I1325553
	is resolved. Changed YLabel accordingly.

2015-05-19  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add (preliminary) ATLAS combined Higgs analysis
	(ATLAS_2015_I1364361). Data will be updated and more
	histos added as soon as paper is published in journal.
	For now using data taken from public ressource
	https://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PAPERS/HIGG-2014-11/

2015-05-19  Peter Richardson <peter.richardson@durham.ac.uk>

	* Fix ATLAS_2014_I1325553 normalisation of histograms was wrong by
	factor of two |y| vs y problem

2015-05-01  Andy Buckley  <andy.buckley@cern.ch>

	* Fix MC_HJETS/HINC/HKTSPLITTINGS analyses to (ab)use the ZFinder
	with a mass range of 115-135 GeV and a mass target of 125 GeV (was
	previously 115-125 and mass target of mZ)

2015-04-30  Andy Buckley  <andy.buckley@cern.ch>

	* Removing uses of boost::assign::list_of, preferring the existing
	comma-based assign override for now, for C++11 compatibility.

	* Convert MC_Z* analysis finalize methods to use scale() rather than normalize().

2015-04-01  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Add CMS 7 TeV rapidity gap analysis (CMS_2015_I1356998).
